Add 'safe fonts' to fonts.html

--- a/fonts.html
+++ b/fonts.html
@@ -473,7 +473,7 @@
         </section>
         <section>
           <h3>Font Types</h3>
-          <h4>Serif fonts</h4>
+          <h4>Serif</h4>
           <p>
           	Serif fonts(e.g. Times) have little hooks on the ends of the 
           	letters/characters. These fonts are more suitable for 
@@ -489,7 +489,7 @@
           <div class="serif">
           	<p>This is a Serif font.</p>
           </div>
-          <h4>Sans Serif fonts</h4>
+          <h4>Sans Serif</h4>
           <p>
           	Sans Serif fonts(e.g. Arial) haven't got any hooks on the ends of 
           	the letters/characters like Serif fonts do. They are often used to 
@@ -500,7 +500,7 @@
           <div class="sans-serif">
           	<p>This is a Sans Serif font.</p>
           </div>
-          <h4>Monospaced fonts</h4>
+          <h4>Monospace</h4>
           <p>
           	A Monospaced font(e.g. Courier, Monaco) is a font whose 
           	letters/characters each occupy the same amount of horizontal space.
@@ -514,6 +514,15 @@
           <div class="monospace">
           	<p>This is a Monospaced font.</p>
           </div>
+          <h4>Safe fonts</h4>
+          <p>
+          	The fonts that are most safe to use are:
+          	<ul>
+							<li>Serif: Times New Roman (Windows) / Times (Mac, Unix)</li>
+							<li>Sans Serif: Arial (Windows) / Helvetica (Mac, Unix)</li>
+							<li>Monospaced: Courier New (Windows, Mac) / Courier (Mac, Unix)</li>
+						</ul>
+					</p>
         </section>
       </article>
     </main>
